--- a/app/src/main/res/layout/fragment_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_wallpaper.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/wallpaper_recycler_view"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.atech.wallpaper.ui.fragments.wallpaper.WallpaperFragment"
-    android:layout_height="match_parent" />
+    tools:listitem="@layout/row_image" />
 
